--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -42,20 +42,38 @@
 }
 
 .navbar-nav .nav-item {
-  margin-left: 20px;
-}
-
-.navbar-nav .nav-link {
+  display: flex;
+  justify-content: center;
+  margin-left: 30px;
+  color: inherit;
+  text-decoration: inherit;
+  text-transform: uppercase;
+  outline: none;
   color: #fff;
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 4px;
 }
 
-.navbar-nav .nav-link:hover {
+.navbar-nav .nav-item:hover {
   background-color: #555;
 }
 
-.navbar-nav .nav-link.active {
+.navbar-nav .nav-item.active {
   background-color: #555;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 0, 0, 0.185);
+  color: white;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
