--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -3,9 +3,73 @@
   margin-bottom: 20px;
 }
 
-.main-content {
+/* .main-content {
     display: flex;
     flex-wrap: wrap;
-    
+} */
+
+/* Home.css */
+.home-page {
+  font-family: Arial, sans-serif;
 }
+
+.hero-section {
+  position: relative;
+  height: 60vh;
+  background-image: url('../Assets/pexels-mikhail-nilov-6707687.jpg');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+}
+
+.hero-content {
+  background: rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.hero-content h1 {
+  font-size: 3em;
+  margin: 0;
+}
+
+.hero-content p {
+  font-size: 1.5em;
+  margin: 10px 0;
+}
+
+.cta-button {
+  background-color: #ff6347;
+  border: none;
+  color: white;
+  padding: 15px 30px;
+  font-size: 1em;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.cta-button:hover {
+  background-color: #ff4500;
+}
+
+.main-content {
+  padding: 20px;
+  text-align: center;
+}
+
+.main-content h1 {
+  font-size: 2em;
+  margin-top: 20px;
+}
+
+.main-content p {
+  font-size: 1.2em;
+  margin-top: 10px;
+}
+
 
