--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 
 
-body {
+/* body {
   font-family: 'Poppins', sans-serif;
   display: flex; 
   justify-content: safe;
@@ -13,8 +13,8 @@ body {
 }
 
 main { 
-  min-height: 80vh;
-}
+  min-height: 80vh; */
+/* } */
 
 
 
