--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -27,7 +27,7 @@
 }
 
 .navbar-toggler .navbar-toggler-icon {
-  background-color: #fff;
+  background-color: black;
 }
 
 .navbar-collapse {
@@ -49,7 +49,7 @@
   text-decoration: inherit;
   text-transform: uppercase;
   outline: none;
-  color: #fff;
+  color: black;
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 4px;
@@ -76,4 +76,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.d-inline-block {
+  color: black;
 }
